examples/test/testpolicy13692.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13692
  namespace: namespace103
spec:
  podSelector:
    matchLabels:
      key47: value10
      key29: value15
      key11: value36
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key27: value45
          key8: value23
      podSelector:
        matchLabels:
          key30: value9
